<resources>
	<string name="app_name" translatable="false">FlowX</string>
	<string name="action_settings">Settings</string>
	<string name="action_add">New conversation</string>
	<string name="action_accounts">My Account</string>
	<string name="action_end_conversation">End this conversation</string>
	<string name="action_contact_details">Contact details</string>
	<string name="action_muc_details">Group details</string>
	<string name="action_secure">Secure conversation</string>
	<string name="action_add_account">Login</string>
	<string name="action_edit_contact">Edit name</string>
	<string name="action_add_phone_book">Add to phone book</string>
	<string name="action_delete_contact">Delete Contact</string>
	<string name="action_block_contact">Block contact</string>
	<string name="action_unblock_contact">Unblock contact</string>
	<string name="action_block_domain">Block domain</string>
	<string name="action_unblock_domain">Unblock domain</string>
	<string name="title_activity_manage_accounts">Manage Accounts</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_activity_conference_details">Conference Details</string>
	<string name="title_activity_contact_details">Contact Details</string>
	<string name="title_activity_sharewith">Share with Conversation</string>
	<string name="title_activity_start_conversation">Start Conversation</string>
	<string name="title_activity_choose_contact">Choose contact</string>
	<string name="title_activity_block_list">Block list</string>
	<string name="just_now">just now</string>
	<string name="minute_ago">1 min ago</string>
	<string name="minutes_ago">%d mins ago</string>
	<string name="unread_conversations">unread Conversations</string>
	<string name="sending">sending…</string>
	<string name="encrypted_message">Decrypting message. Please wait…</string>
	<string name="nick_in_use">Nickname is already in use</string>
	<string name="admin">Admin</string>
	<string name="owner">Owner</string>
	<string name="moderator">Moderator</string>
	<string name="participant">Participant</string>
	<string name="visitor">Visitor</string>
	<string name="remove_contact_text">Would you like to remove this contact? The conversation associated with this contact will not be removed.</string>
	<string name="block_contact_text">Would you like to block this Contact?</string>
	<string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
	<string name="block_domain_text">Block all contacts from %s?</string>
	<string name="unblock_domain_text">Unblock all contacts from %s?</string>
	<string name="contact_blocked">Contact blocked</string>
	<string name="remove_bookmark_text">Would you like remove this group?</string>
	<string name="register_account">Register</string>
	<string name="change_password_on_server">Change password on server</string>
	<string name="share_with">Share with…</string>
	<string name="start_conversation">Start Conversation</string>
	<string name="invite_contact">Invite Contact</string>
	<string name="contacts">Contacts</string>
	<string name="cancel">Cancel</string>
	<string name="set">Set</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="block">Block</string>
	<string name="unblock">Unblock</string>
	<string name="save">Save</string>
	<string name="ok">OK</string>
	<string name="crash_report_title">FlowX has crashed</string>
	<string name="crash_report_message">By sending in stack traces you are helping the ongoing development of Conversations\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
	<string name="send_now">Send now</string>
	<string name="send_never">Never ask again</string>
	<string name="problem_connecting_to_account">Unable to connect to account</string>
	<string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
	<string name="touch_to_fix">Touch here to manage your accounts</string>
	<string name="attach_file">File</string>
	<string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
	<string name="add_contact">Add contact</string>
	<string name="send_failed">delivery failed</string>
	<string name="send_rejected">rejected</string>
	<string name="preparing_image">Preparing image for transmission</string>
	<string name="action_clear_history">Clear history</string>
	<string name="clear_conversation_history">Clear Conversation History</string>
	<string name="clear_histor_msg">Do you want to delete all messages within this Conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
	<string name="delete_messages">Delete messages</string>
	<string name="also_end_conversation">End this conversation afterwards</string>
	<string name="choose_presence">Choose presence to contact</string>
	<string name="send_unencrypted_message">Send</string>
	<string name="send_otr_message">Send OTR encrypted message</string>
	<string name="send_omemo_message">Send encrypted</string>
	<string name="send_pgp_message">Send OpenPGP encrypted message</string>
	<string name="your_nick_has_been_changed">Your nickname has been changed</string>
	<string name="send_unencrypted">Send unencrypted</string>
	<string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
	<string name="openkeychain_required">OpenKeychain</string>
	<string name="openkeychain_required_long">Conversations utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Conversations afterwards.)</small></string>
	<string name="restart">Restart</string>
	<string name="install">Install</string>
	<string name="offering">offering…</string>
	<string name="waiting">waiting…</string>
	<string name="no_pgp_key">No OpenPGP Key found</string>
	<string name="contact_has_no_pgp_key">Conversations is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
	<string name="no_pgp_keys">No OpenPGP Keys found</string>
	<string name="pref_general">General</string>
	<string name="pref_xmpp_resource">Resource</string>
	<string name="pref_xmpp_resource_summary">The name this client identifies itself with</string>
	<string name="pref_accept_files">Accept files</string>
	<string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
	<string name="pref_notification_settings">Notification Settings</string>
	<string name="pref_notifications">Notifications</string>
	<string name="pref_notifications_summary">Notify when a new message arrives</string>
	<string name="pref_vibrate">Vibrate</string>
	<string name="pref_vibrate_summary">Also vibrate when a new message arrives</string>
	<string name="pref_sound">Sound</string>
	<string name="pref_sound_summary">Play ringtone with notification</string>
	<string name="pref_advanced_options">Advanced Options</string>
	<string name="pref_confirm_messages">Confirm Messages</string>
	<string name="pref_confirm_messages_summary">Let your contact know when you have received and read a message</string>
	<string name="pref_ui_options">UI Options</string>
	<string name="pref_grant_presence_updates">Grant presence updates</string>
	<string name="pref_grant_presence_updates_summary">Preemptively grant and ask for presence subscription for contacts you created</string>
	<string name="mgmt_account_publish_avatar">Publish avatar</string>
	<string name="search">Search</string>
	<string name="create_contact">Add Contact</string>
	<string name="enable">Enable</string>
	<string name="title_activity_about">About FlowX</string>
	<string name="title_pref_quiet_hours">Quiet Hours</string>
	<string name="title_pref_quiet_hours_start_time">Start time</string>
	<string name="title_pref_quiet_hours_end_time">End time</string>
	<string name="title_pref_enable_quiet_hours">Enable quiet hours</string>
	<string name="pref_quiet_hours_summary">Notifications will be silenced during quiet hours</string>
	<string name="pref_use_larger_font">Increase font size</string>
	<string name="pref_use_larger_font_summary">Use larger font sizes across the entire app</string>
	<string name="pref_use_send_button_to_indicate_status">Send button indicates status</string>
	<string name="pref_use_indicate_received">Request message receipts</string>
	<string name="pref_use_indicate_received_summary">Received messages will be marked with a green tick if supported</string>
	<string name="pref_use_send_button_to_indicate_status_summary">Colorize send button to indicate contact status</string>
	<string name="pref_conference_name">Group name</string>
	<string name="pref_conference_name_summary">Use room’s subject instead of JID to identify Groups</string>
	<string name="show_qr_code">QR code</string>
	<string name="show_block_list">Blocklist</string>
	<string name="pref_keep_foreground_service">Keep service in foreground</string>
	<string name="pref_keep_foreground_service_summary">Prevents the operating system from killing your connection</string>
	<string name="pref_export_logs">Save Chat history</string>
	<string name="pref_export_logs_summary">Write logs to SD card</string>
	<string name="regenerate_omemo_key">Regenerate keys?</string>
	<string name="change_password">Change password</string>
	<string name="enable_all_accounts">Enable all accounts</string>
	<string name="disable_all_accounts">Disable all accounts</string>
	<string name="pref_input_options">Input options</string>
	<string name="pref_enter_is_send">Enter is send</string>
	<string name="pref_enter_is_send_summary">Use enter key to send message</string>
	<string name="pref_display_enter_key">Show enter key</string>
	<string name="pref_display_enter_key_summary">Change the emoticons key to an enter key</string>
	<string name="hide_offline">Hide offline</string>
	<string name="pref_quick_action_summary">Replace send button with quick action</string>
	<string name="pref_quick_action">Quick Action</string>
	<string name="choose_quick_action">Choose quick action</string>
	<string name="pref_presence_settings">Privacy</string>
	<string name="pref_away_when_screen_off">Away when screen is off</string>
	<string name="pref_away_when_screen_off_summary">Marks your resource as away when the screen is turned off</string>
	<string name="pref_xa_on_silent_mode">Not available in silent mode</string>
	<string name="pref_xa_on_silent_mode_summary">Marks your resource as not available when phone is in silent mode</string>
	<string name="action_add_account_with_certificate">Add account with certificate</string>
	<string name="share">Share</string>
	<string name="pref_use_tor">Connect via Tor</string>
	<string name="pref_use_tor_summary">Tunnel all connections through the TOR network. Requires Orbot</string>
	<string name="pref_led">LED Notification</string>
	<string name="pref_led_summary">Blink notification light when a new message arrives</string>
	<string name="pref_manually_change_presence">Show Status</string>
	<string name="pref_manually_change_presence_summary">Hide or show your Status Message</string>
	<string name="change_presence">Status</string>
	<string name="action_about">About</string>
	<string name="action_copy_location">Copy Location</string>
	<string name="action_share_location">Share Location</string>
	<string name="location_disabled">Location sharing is disabled</string>
	<string name="create_conference">Create Group</string>
	<string name="action_check_update">Check for Updates</string>
	<string name="pref_broadcast_last_activity">Last activity</string>
	<string name="pref_broadcast_last_activity_summary">Let all your contacts know when you use FlowX</string>
</resources>