<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="manually_change_presence"
        android:title="@string/pref_manually_change_presence"
        android:summary="@string/pref_manually_change_presence_summary"
        android:disableDependentsState="true" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="last_activity"
        android:title="@string/pref_broadcast_last_activity"
        android:summary="@string/pref_broadcast_last_activity_summary" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="confirm_messages"
        android:summary="@string/pref_confirm_messages_summary"
        android:title="@string/pref_confirm_messages" />
</PreferenceScreen>