<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_show_qr_code"
        android:title="@string/show_qr_code"
        android:visible="false"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_change_presence"
        android:showAsAction="always"
        android:title="@string/change_presence"
        android:icon="@drawable/ic_announcement_white_24dp"/>
    <item
        android:id="@+id/action_change_presence2"
        android:showAsAction="withText"
        android:title="@string/change_presence"
        android:icon="@drawable/ic_announcement_white_24dp"/>
    <item
        android:id="@+id/action_PublishProfilePictureActivity"
        android:title="@string/mgmt_account_publish_avatar"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_show_block_list"
        android:title="@string/show_block_list"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_change_password_on_server"
        android:icon="?attr/icon_edit"
        android:title="@string/change_password"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_clear_devices"
        android:title="@string/regenerate_omemo_key"
        android:visible="false"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_restart"
        android:title="@string/restart"
        android:visible="true"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_check_updates"
        android:title="@string/action_check_update"
        android:showAsAction="never" />
</menu>