<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/action_show_qr_code"
		android:title="@string/show_qr_code"
		android:visible="false"
		android:showAsAction="never" />
	<item
		android:id="@+id/action_add_account"
		android:icon="?attr/icon_add_person"
		android:showAsAction="never"
        android:visible="false"
		android:title="@string/action_add_account"/>
	<item
		android:id="@+id/edit"
		android:showAsAction="never"
		android:icon="?attr/icon_add_person"
		android:title="@string/action_add_account_with_certificate"
		android:visible="false"/>
	<item
		android:id="@+id/action_enable_all"
        android:visible="false"
		android:title="@string/enable_all_accounts"/>
	<item
		android:id="@+id/action_disable_all"
        android:visible="false"
		android:title="@string/disable_all_accounts"/>
	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_settings"/>

</menu>