<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|always"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_create_contact"
        android:icon="?attr/icon_add_person"
        app:showAsAction="ifRoom"
        android:title="@string/create_contact" />
    <item
        android:id="@+id/action_create_conference"
        android:icon="?attr/icon_add_group"
        app:showAsAction="ifRoom"
        android:title="@string/create_conference"/>
    <item
        android:id="@+id/action_show_qr_code"
        android:visible="false"
        app:showAsAction="never"
        android:title="QR Scanner" />

    <item
        android:id="@+id/action_hide_offline"
        android:checkable="true"
        android:checked="false"
        android:visible="false"
        android:orderInCategory="85"
        app:showAsAction="never"
        android:title="@string/hide_offline"/>
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        app:showAsAction="never"
        android:title="@string/action_accounts" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />

</menu>