<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_share_location"
          app:showAsAction="ifRoom"
          android:showAsAction="ifRoom"
          android:title="@string/action_share_location"
          android:actionProviderClass="android.widget.ShareActionProvider"
          tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_copy_location"
          android:title="@string/action_copy_location"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="100"
          app:showAsAction="never"
          android:showAsAction="never"
          android:visible="false"
        tools:ignore="AppCompatResource"/>
</menu>
