<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="net.atomarea.flowx_nobind.activities.ShareLocationActivity">

    <org.osmdroid.views.MapView android:id="@+id/map"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

    <!-- Parts of this resource are copied from the official location sharing plugin by iNPUTmice -->
    <RelativeLayout
        android:id="@+id/snackbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_above="@+id/button_bar"
        android:background="@drawable/snackbar"
        android:minHeight="48dp"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/snackbar_action"
            android:layout_toStartOf="@+id/snackbar_action"
            android:paddingLeft="24dp"
            android:textColor="@color/ondarktext"
            android:textSize="?attr/TextSizeBody"
            android:text="@string/location_disabled"/>

        <TextView
            android:id="@+id/snackbar_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:textAllCaps="true"
            android:textColor="@color/ondarktext"
            android:textSize="?attr/TextSizeBody"
            android:textStyle="bold"
            android:text="@string/enable"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/primarytext" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/divider" />

        <Button
            android:id="@+id/share_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/share"
            android:textColor="@color/secondarytext" />
    </LinearLayout>

</RelativeLayout>
